@startuml
'https://plantuml.com/class-diagram

class Project
class ProductBacklog
class Sprint
class SprintBacklog
class UserStory


Project "1"--"1" ProductBacklog: contains
Project "1"--"1*" Sprint: has
Sprint "1"--"1" SprintBacklog: contains
ProductBacklog "1"--"1*" UserStory: is made up of
SprintBacklog "1"--"1*" UserStory: contains
UserStory "1"--"1*" UserStory: is decomposed in

class Project {
Code
Name
Description
Number of planned sprints
Status
Start date
End date
Budget
Sprint duration
}

class Sprint {
Start date
End date
Status
Sprint ID
Sprint order number
Sprint task list
}

class UserStory {
User Story ID
Description
Effort estimate
Priority
User Story status
}

@enduml